Add Vercel proxy API to avoid CORS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input 
                         type="text" 
                         id="apiUrl" 
-                        value="https://combine-epubs.vercel.app" 
+                        value=""
                         placeholder="https://combine-epubs.vercel.app"
                     >
                     <button id="testConnection" class="btn-secondary">Test Connection</button>
