--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReadEasy</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>📖</text></svg>">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -109,6 +111,7 @@
                                 <button class="btn-secondary font-btn" data-font="20" type="button">A+</button>
                                 <button class="btn-secondary font-btn" data-font="22" type="button">A++</button>
                             </div>
+                            <button id="downloadEpub" class="btn-success" type="button" disabled>📥 EPUB</button>
                         </div>
                     </div>
 
