Add optional title input for convert text

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
                 <div class="card convert-card">
                     <h2>📝 Convert Text</h2>
                     <p class="info-text">Paste long text below and convert it into a reader-friendly article.</p>
+                    <label class="convert-label" for="convertTitle">Optional Title</label>
+                    <input id="convertTitle" class="convert-input" type="text" placeholder="Add a title (optional)">
                     <textarea id="convertInput" class="convert-textarea" rows="12" placeholder="Paste your text here..."></textarea>
                     <div class="convert-actions">
                         <button id="convertSubmit" class="btn-primary" disabled>Convert to Reader View</button>
